--- a/index.html
+++ b/index.html
@@ -34,66 +34,95 @@
         <p class="lead">Portfolio</p>
         <hr class="my-4">
         <div id="aboutme">
-        <p id="me">I am currently enrolled in the JavaScript class at Eleven Fifty Academy and working as a Senior Project Consultant focused on resource development. Most of my career has been in the nonprofit sector, working with volunteers, planning events, and a lot of "other duties as assigned." Through this class, I hope to learn a lot of new things and ultimately change career paths.</p>
+        <p id="me">I am currently enrolled in the JavaScript class at Eleven Fifty Academy 
+          and working as a Senior Project Consultant focused on resource development. 
+          I have worked in the nonprofit sector in a variety of capacities 
+          including grant management, community  engagement, and grant making. 
+          I earned my Certificate as a Project Management Professional (PMP) in 2018 and a Masters
+           Certificate in Non-Profit Management in 2013. 
+          I excel at project planning, management,  and  implementation; 
+          resource  and  relationship development; and consensus building.</p>
         </div></div>
-      <div class="projectCarousel" id="projects">
-          <container class="background">
-          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <a href="https://codepen.io/beckyfox/pen/ROLLvv#code-area" target= "blank"><img src="portfolioAssets/CSS Creature Photo.png" class="d-block w-100" alt="..."></a>
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>CSS Creature</h5>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="https://cdn.theatlantic.com/assets/media/img/mt/2017/10/Pict1_Ursinia_calendulifolia/lead_720_405.jpg?mod=1533691909" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>JavaScript Tutorial</h5>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="https://images.pexels.com/photos/36764/marguerite-daisy-beautiful-beauty.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>API Project</h5>
-                </div>
+        <div id= 'projects' class="card-group">
+            <div class="card">
+              <a href="https://codepen.io/beckyfox/pen/ROLLvv" target="blank">
+              <img class="card-img-top" src="portfolioAssets/CSS Creature Photo.png" alt="CSS Creature">
+              <div class="card-body">
+                <h5 class="card-title">CSS Creature</h5>
+                </a>
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+            <div class="card">
+                <a href="https://foxbeckya.github.io/foxbeckya.tutorial/" target="blank">
+              <img class="card-img-top" src="portfolioAssets/JS Tutorial Screen Shot.png" alt="JavaScript Tutorial">
+              <div class="card-body">
+                <h5 class="card-title">JavaScript Tutorial</h5>
+                </a>
+              </div>
+            </div>
+            <div class="card">
+                <a href="https://api-project-foxbeckya.firebaseapp.com/" target="blank">
+              <img class="card-img-top" src="portfolioAssets/API Project Screen Shot.png" alt="API Project">
+              <div class="card-body">
+                <h5 class="card-title">API Project</h5>
+                </a>
+              </div>
+            </div>
           </div>
-        </div>
         </div>
       </div>
     </div>
   </div>
 </div>       
 </container>
-<div id="contactForm">
-  <h2>Contact Me</h2>
-        <form action="https://formspree.io/foxbeckya@gmail.com" method="POST"></form>
-            <p><label> Name: </label><input type="text" name="Name"></p>
-            <p><label>Email Address: </label><input type="email" name="Email Address"></p>
-            <p><label>Your Message: </label><textarea name="Message" rows="4"></textarea></p>
-            <p><input id="submit" type="submit" value="Submit"></i></p>
-        </form> 
-    </div> 
+<section id="contactForm">
+    <div class="container">
+      <br>
+      <br>
+      <h2 class="text-center text-uppercase">Contact Me</h2>
+      <div class="row">
+        <div class="col-12">
+          <form action="https://formspree.io/foxbeckya@gmail.com" method="POST">
+            <div class="control-group">
+              <div class="form-group">
+                <label>Name</label>
+                <input type="text" class="form-control" placeholder="Your Name" id="name" required
+                  data-validation-required-message="Please enter your name" name="name">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="form-group">
+                <label>Email Address</label>
+                <input type="email" class="form-control" placeholder="Your Email" id="email" required
+                  data-validation-required-message="Please enter your email" name="_replyto">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="form-group">
+                <textarea class="form-control" rows="7" placeholder="Your Message" id="message" required
+                  data-validation-required-message="Please leave a message" name="message"></textarea>
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="text-center">
+              <div id="success"></div>
+              <button id="submit" type="submit" class="btn btn-lg btn-black">
+                <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                Send Message
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
 <footer class="bottom">
     <p><a href="https://www.linkedin.com/in/becky-fox-bbb2894/" target= "blank" title="LinkedIn" class="btn btn-linkedin"><i class="fa fa-linkedin fa-fw"></i> LinkedIn</a>
-    <a href="https://github.com/foxbeckya/javascriptLibraryApril2019" target="blank" title="GitHub" class="btn btn-github"><i class="fa fa-github"></i>GitHub</a>
-    <a href="portfolioAssets/Fox_Becky_PMP_Resume.pages" target="blank" title="Resume" class="btn btn-resume">Resume</a></p>
+    <a href="https://github.com/foxbeckya?tab=repositories" target="blank" title="GitHub" class="btn btn-github"><i class="fa fa-github"></i>GitHub</a>
+    <a href="https://drive.google.com/open?id=1kHR-sFv7LNxQa3KhyJJnKAUrr1zklKVo" target="blank" title="Resume" class="btn btn-resume">Resume</a></p>
 </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
