--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="card">
                 <a href="https://api-project-foxbeckya.firebaseapp.com/" target="blank">
-              <img class="card-img-top" src="portfolioAssets/API Project Screen Shot.png" alt="API Project">
+              <img class="card-img-top" src="portfolioAssets/API Project.png" alt="API Project">
               <div class="card-body">
                 <h5 class="card-title">API Project</h5>
                 </a>
